<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NewDiraryActivity">

    <TextView
        android:id="@+id/diary_title_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/diary"
        app:layout_constraintBottom_toTopOf="@id/diary_desc_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/diary_desc_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/diary_desc"
        app:layout_constraintBottom_toTopOf="@id/english_diary_scrollview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/auto_line_feed_checkbox"
        app:layout_constraintTop_toBottomOf="@+id/diary_title_textview" />

    <CheckBox
        android:id="@+id/auto_line_feed_checkbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:checked="true"
        android:text="@string/auto_line_feed"
        app:layout_constraintBottom_toTopOf="@id/english_diary_scrollview"
        app:layout_constraintLeft_toRightOf="@id/diary_desc_textview"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diary_title_textview" />

    <ScrollView
        android:id="@+id/english_diary_scrollview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/cancel_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/diary_desc_textview">

        <EditText
            android:id="@+id/english_diary_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_background"
            android:gravity="top|left" />
    </ScrollView>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/temp_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/temp_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/save_button" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/temp_save_button" />
</androidx.constraintlayout.widget.ConstraintLayout>